<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activities.auth.signup.SignUpActivity">

    <EditText
            android:id="@+id/signUpEditId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:hint="이메일을 입력해주세요"
            android:inputType="textPersonName"

            app:layout_constraintBottom_toTopOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <EditText
            android:id="@+id/signUpEditPhone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:hint="휴대폰 번호를 입력해주세요"
            android:inputType="textPhonetic"
            app:layout_constraintBottom_toTopOf="@+id/textView8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

    <EditText
            android:id="@+id/signUpEditPsConfirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:hint="패스워드를 한 번더 입력해주세요"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/textView6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <EditText
            android:id="@+id/signUpEditName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:hint="성함을 입력해주세요"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/textView7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

    <TextView
            android:id="@+id/signUpTxtAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="주소 찾기를 눌러주세요"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/signUpEditAdressDetail"
            app:layout_constraintEnd_toStartOf="@+id/guideline9"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

    <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="이름"

            app:layout_constraintBottom_toTopOf="@+id/signUpEditName"
            app:layout_constraintStart_toStartOf="@+id/signUpEditName" />

    <EditText
            android:id="@+id/signUpEditPs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:hint="패스워드 8글자 이상"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="아이디"
            app:layout_constraintBottom_toTopOf="@+id/signUpEditId"
            app:layout_constraintStart_toStartOf="@+id/signUpEditId" />

    <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="패스워드"
            app:layout_constraintBottom_toTopOf="@+id/signUpEditPs"
            app:layout_constraintStart_toStartOf="@+id/signUpEditPs" />

    <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="패스워드 확인"
            app:layout_constraintBottom_toTopOf="@+id/signUpEditPsConfirm"
            app:layout_constraintStart_toStartOf="@+id/signUpEditPsConfirm" />

    <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="휴대폰번호"
            app:layout_constraintBottom_toTopOf="@+id/signUpEditPhone"
            app:layout_constraintStart_toStartOf="@+id/signUpEditPhone" />

    <Button
            android:id="@+id/signUpBtnSubmit"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:enabled="false"
            android:text="회원가입 후 시작하기"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline8" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.91" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />

    <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="주소"
            app:layout_constraintBottom_toTopOf="@+id/signUpTxtAddress"
            app:layout_constraintStart_toStartOf="@+id/signUpTxtAddress" />


    <Button
            android:id="@+id/signUpBtnFindAddress"
            android:layout_width="71dp"
            android:layout_height="50dp"
            android:text="주소 검색"
            app:layout_constraintBottom_toBottomOf="@+id/signUpTxtAddress"
            app:layout_constraintEnd_toEndOf="@+id/signUpEditName"
            app:layout_constraintStart_toStartOf="@+id/guideline9"
            app:layout_constraintTop_toTopOf="@+id/signUpTxtAddress" />

    <EditText
            android:id="@+id/signUpEditAdressDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:hint="상세 주소 입력"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/signUpBtnSubmit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:enabled="false"/>

</androidx.constraintlayout.widget.ConstraintLayout>